# aurelion-kernel-lite

./: .gitignore  ACTION_CHECKLIST.md  ARCHITECTURE.md  CONTRIBUTING.md  HANDOFF.md  README.md  ROADMAP.md  STRUCTURE.md  temp_strategic_advisor.txt
docs/: 06_Project_Investigation_Template.md  ADVISOR_ANALYSIS.md  CLARITY_FIRST_NAMING.md  COMPASS_RENAME_OPTIONS.md  FTO_ACTION_PLAN.md  FTO_MODULE_MODIFICATIONS.md  FTO_NAMING_DECISIONS.md  FTO_PROGRESS_REPORT.md  FTO_Summary.md  FTO_WEEK2_COMPLETION_REPORT.md  GITHUB_SETUP_GUIDE.md  LAUNCH_CHECKLIST.md  MULTI_REPO_LAUNCH_GUIDE.md  PHASE1_COMPLETE.md  PHASE1_LAUNCH_READINESS.md  RENAME_COMPLETE.md  THIS_SESSION.md  THIS_SESSION_2.md  THIS_SESSION_3.md  THIS_SESSION_4.md  THIS_SESSION_6.md  email-reply-draft.md
docs/guides/: advisor-agent-integration.md  development-setup.md  getting-started.md  migration-guide.md  module-integration.md  quick-reference.md  tier-comparison.md
docs/planning/: 2026-02-16-kernel-evolution.md  5-module-quick-reference.md  compass-agent-integration.md  compass-agent-strategy-REVISED.md  memory-engine-analysis.md  memory-engine-classification.csv  memory-engine-inventory.csv  naming-strategy.md  repository-strategy.md  sanitization-roadmap.md  skills-strategy.md  tiering-strategy.md  week1-classification-summary.md
modules/agent/: README.md  pyproject.toml
modules/agent/aurelion-agent-business/: README.md
modules/agent/src/aurelion_agent/: __init__.py  base_agent.py  builtin_tools.py  evaluator.py  llm_provider.py  schemas.py  server.py  sinks.py  supervisor.py  tools.py
(+10 files in other folders)
