[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurelion-agent"
version = "0.2.0"
description = "Aurelion Agent — base agent loop, tool calling, tracing, and LLM provider interface"
readme = "README.md"
license = "MIT"
keywords = ["ai", "agent", "llm", "aurelion", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]

[project.urls]
Homepage = "https://github.com/aurelion-labs/aurelion-eco"
Repository = "https://github.com/aurelion-labs/aurelion-eco"

[tool.setuptools.packages.find]
where = ["src"]
